# wwi-dab

./: .gitignore  README.md  databricks.yml  pyproject.toml  setup.py  targets.yml  variables.yml
.github/workflows/: cicd.yml
resources/: wwi_dab.job.yml  wwi_dab.pipeline.yml
src/: dlt_pipeline.ipynb  notebook.ipynb  wwi_bronze.ipynb  wwi_silver.ipynb
src/wwi_dab/: main.py  schema.py
tests/: main_test.py
