[project]
name = "wwi-dab"
version = "0.1.0"
description = ""
authors = [
    {name = "cmpbj",email = "magnocarlos3232@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry.scripts]
main = "wwi_dab.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
